--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="#main" class="skip">Skip to main content</a>
-        <nav class="navbar_main">
+        <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tricks.html">Tricks</a></li> 
@@ -28,6 +28,6 @@
         <video autoplay muted loop id="background_video">
             <source src="images/background.mp4" type="video/mp4">
         </video>
-        
+
     </main>
 </body>
