--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             </video>
             <h1 class="intro">Hi! This is Emily Tsai!</h1>
             <p class="intro_content">I am recently learning kendama and am excited to explore more cool tricks :)</p>
-        </div>
-        <div id="kendama_history">
             <h2>History</h2>
             <p id="history_detail">Kendama is a traditional Japanese skill toy that consists of a wooden handle with a ball attached by a string. It has gained popularity worldwide and is used for developing hand-eye coordination, focus, and creativity. Kendama is a fun and challenging pastime enjoyed by children and adults alike.</p>
+            <h2>Why I want to practice kendama</h2>
+            <p id="history_detail">It has a lot of tricks and variations that I can play with! I also enjoy in gaining new skills.</p>
         </div>
+
     </main>
 </body>
