--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tricks.html">Tricks</a></li> 
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Diary</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="diary.html">Diary</a></li>
             </ul>
         </nav>
     </header>
@@ -32,10 +32,16 @@
             </video>
             <h1 class="intro">Hi! This is Emily Tsai!</h1>
             <p class="intro_content">I am recently learning kendama and am excited to explore more cool tricks :)</p>
-            <h2>History</h2>
+            <h2>What is kendama?</h2>
             <p id="history_detail">Kendama is a traditional Japanese skill toy that consists of a wooden handle with a ball attached by a string. It has gained popularity worldwide and is used for developing hand-eye coordination, focus, and creativity. Kendama is a fun and challenging pastime enjoyed by children and adults alike.</p>
-            <h2>Why I want to practice kendama</h2>
-            <p id="history_detail">It has a lot of tricks and variations that I can play with! I also enjoy in gaining new skills.</p>
+            <h2>Why I want to practice kendama?</h2>
+            <p id="history_detail">It has a lot of tricks and variations that I can play with! I also enjoy in gaining new skills! My goal now is to master the basic tricks and created a video based on the trick I learned!</p>
+            <h2>What you can find in this website?</h2>
+            <ul id="history_detail">
+                <li>Tricks - See what tricks you can play with kendama!</li>
+                <li>Music - Here I list some music that I want to match with the tricks. Videos coming soon ;></li>
+                <li>Diary - Here I record the story of me practicing kendama. A lot of failure included but I will keep trying!</li>
+            </ul>
         </div>
 
     </main>
