--- a/tricks.html
+++ b/tricks.html
@@ -18,8 +18,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tricks.html">Tricks</a></li> 
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Diary</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="diary.html">Diary</a></li>
             </ul>
         </nav>
     </header>
