--- a/music.html
+++ b/music.html
@@ -11,7 +11,7 @@
     <link rel="icon" id="title_icon" type="images/x-icon" href="images/Asset_start.png">
     <title>Emily's Final Project</title>
 </head>
-<body>
+<body class="music-body">
     <header>
         <a href="#main" class="skip">Skip to main content</a>
         <nav class="navbar">
